https first part

--- a/20180817_https.md
+++ b/20180817_https.md
@@ -9,25 +9,60 @@ Internet is moving toward secure connections whereby HTTPS is a priority. Browse
 ## 1. Setup the example
 
 We assume that our environment is on Ubuntu, with nginx and dotnet installed.
-If you are on Windows, you can [install the linux subsystem with Ubuntu 16.04 as describe on my previous post](). This will give access to most of the features of Ubuntu via a bash prompt.
+If you are on Windows, you can [install the linux subsystem with Ubuntu 16.04 as describe on my previous post](https://kimsereyblog.blogspot.com/2018/03/install-dotnet-on-ubuntu-with-linux.html). This will give access to most of the features of Ubuntu via a bash prompt.
 
 To start we create a HelloWorld application with dotnet. Here is the `Startup.cs` which simply serves a `Hello world`.
 
-```
-....
+```c#
+public class Startup
+{
+    public void ConfigureServices(IServiceCollection services) { }
+
+    public void Configure(IApplicationBuilder app, IHostingEnvironment env)
+    {
+        if (env.IsDevelopment())
+        {
+            app.UseDeveloperExceptionPage();
+        }
+        
+        app.Run(async (context) =>
+        {
+            await context.Response.WriteAsync("Hello World!");
+        });
+    }
+}
 ```
 
 When we run this application, we can access `http://localhost:5000`.
+Next we configure our localhost proxy with nginx. We create `localhost` file in `/etc/nginx/sites-available/` where we proxy `localhost` calls to `localhost:5000`.
 
-Next we configure our localhost proxy with nginx. We create `localhost` file in `/etc/nginx/sites-available` where we proxy `localhost` calls to `localhost:5000`.
+```txt
+server {
+    listen 80;
+    include /etc/nginx/proxy_params;
 
+    proxy_http_version 1.1;
+    proxy_cache_bypass $http_upgrade;
+    proxy_set_header Connection $http_connection;
+    proxy_set_header Upgrade $http_upgrade;
+
+    location / {
+        proxy_pass http://localhost:5000;
+    }
+}
 ```
-....
+
+Next symlink the file and remove the default file. And restart nginx:
+
+```sh
+sudo ln -s /etc/nginx/sites-available/localhost /etc/nginx/sites-enabled/localhost
+sudo rm /etc/nginx/sites-enabled/default
+sudo service nginx restart
 ```
 
-So far we have the following:
+Now when we navigate to `http://localhost`, we should have our call proxied to `http://localhost:5000`. So far we have the following:
 
-```
+```txt
 Browser --(http)--> nginx --(http)--> kestrel
 ```
 
@@ -41,7 +76,7 @@ Here we will be creating a self signed certification which means that the certif
 
 _If you need a SSL certificate signed by a trusted CA, you can install SSL nginx using Certbot but you would need to have a valid domain._
 
-So we start first by create a X509 certificate which we will use to setup SSL on Nginx. To create it we will use the same method as explain in my previous post on [create a self signed certificate with Openssl]().
+So we start first by create a X509 certificate which we will use to setup SSL on Nginx. To create it we will use the same method as explain in my previous post on [create a self signed certificate with Openssl](https://kimsereyblog.blogspot.com/2018/07/selfsigned-certificate-for-identity.html).
 
 ```
 server { listen 443 ssl; ssl_certificate localhost.crt; ssl_certificate_key localhost.key;
@@ -64,7 +99,7 @@ Now that we have secured the connection to nginx, we can secure the connection t
 
 Since nginx and kestrel are both on localhost in our example (as we are developing locally), we can use the same certificate which we created as it is bound to the `localhost` common name.
 
-We start by combining `.cer` and `.key` into a `.pfx` file to be used by Kestrel.
+We start by combining `.crt` and `.key` into a `.pfx` file to be used by Kestrel.
 
 ```
 ...
