completed nginx ssl

--- a/20180713_https.md
+++ b/20180713_https.md
@@ -78,18 +78,37 @@ _If you need a SSL certificate signed by a trusted CA, you can install SSL nginx
 
 So we start first by create a X509 certificate which we will use to setup SSL on Nginx. To create it we will use the same method as explain in my previous post on [create a self signed certificate with Openssl](https://kimsereyblog.blogspot.com/2018/07/selfsigned-certificate-for-identity.html).
 
+```sh
+sudo openssl req -x509 -newkey rsa:4096 -keyout localhost.key -out localhost.crt -days 3650 -nodes -subj "/CN=localhost" -config config.cnf
 ```
-server { listen 443 ssl; ssl_certificate localhost.crt; ssl_certificate_key localhost.key;
 
-Proxypass
+`config.cnf` is the copy of the configuration from OpenSSL which has been modified to [add the subject alternate name as discussed in my previous post in section 3)](https://kimsereyblog.blogspot.com/2018/07/selfsigned-certificate-for-identity.html).
+Then we move the created certificate and key to `/etc/localhost` and use it to configure SSL on Nginx:
+
+```txt
+server {
+    listen 443 ssl;
+    ssl_certificate /etc/localhost/localhost.crt;
+    ssl_certificate_key /etc/localhost/localhost.key;
+
+    include /etc/nginx/proxy_params;
+
+    proxy_http_version 1.1;
+    proxy_cache_bypass $http_upgrade;
+    proxy_set_header Connection $http_connection;
+    proxy_set_header Upgrade $http_upgrade;
+
+    location / {
+        proxy_pass http://localhost:5000;
+    }
 }
 ```
 
-Now when we navigate to https://localhost, our communication is encrypted using the SSL cert we created and then proxied as http://localhost:5000.
+Now when we navigate to `https://localhost`, our communication is encrypted using the SSL cert we created and then proxied as `http://localhost:5000`.
 
 So far we have the following:
 
-```
+```txt
 Browser --(https)--> nginx --(http)--> kestrel
 ```
 
