completed ssl for kestrel

--- a/20180713_https.md
+++ b/20180713_https.md
@@ -120,28 +120,67 @@ Since nginx and kestrel are both on localhost in our example (as we are developi
 
 We start by combining `.crt` and `.key` into a `.pfx` file to be used by Kestrel.
 
-```
-...
-```
-
-Next we add the HTTPS configuration on the `WebHostBuilder`.
-
-```
-...
+```sh
+sudo openssl pkcs12 -export -out localhost.pfx -inkey localhost.key -in localhost.crt -name "Localhost Self Signed - Example"
+sudo mv localhost.pfx /mnt/c/Projects/HelloWorld/HelloWorld
 ```
 
-Now when we navigate to https://localhost5001, our connection will be secured when directly interacting with Kestrel. Since Nginx proxies calls to Kestrel, we need to have Nginx verify whether the SSL certificate delivered by Kestrel is valid. We can do that by using the directives `proxy_ssl_trusted_certificate` and `proxy_ssl_verify`.
+Next we add the HTTPS configuration on the `WebHostBuilder`. We copied `localhost.pfx` to the root of the project therefore we can reference it using the name only but it could be placed anywhere, `UseHttps` accepts a path.
+
+```c#
+public class Program
+{
+    public static void Main(string[] args)
+    {
+        CreateWebHostBuilder(args).Build().Run();
+    }
+
+    public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
+        WebHost.CreateDefaultBuilder(args)
+            .UseKestrel(opts => {
+                opts.ListenLocalhost(5001, listenOptions =>
+                {
+                    listenOptions.UseHttps("localhost.pfx");
+                });
+            })
+            .UseStartup<Startup>();
+}
+```
+
+Now when we navigate to `https://localhost5001`, our connection will be secured when directly interacting with Kestrel. Since Nginx proxies calls to Kestrel, we need to have Nginx verify whether the SSL certificate delivered by Kestrel is valid. We can do that by using the directives `proxy_ssl_trusted_certificate` and `proxy_ssl_verify`.
 
 ```
 proxy_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.cer; 
 proxy_ssl_verify on;
 ```
 
-`ca-certificates.cer` contains all certificate trusted by the system. If we want Nginx to trust our `localhost.cer`, we will need to configure Ubuntu to recognize it. To do so, we need to use the `update-ca-certificates` command.
-We start by placing our certificate under `/usr/local/share/ca-certificates/localhost/` then run the command `sudo update-ca-certificates`. The `ca-certificates` folder is scanned during the update and the certificate is added into `ca-certificates.cer`.
+`ca-certificates.cer` contains all certificate trusted by the system but we haven't done anything to make Ubuntu trust our certificate therefore when we try to access `https://localhost`, we get the following error in nginx logs:
 
-And we are done! Now all our communication will be encrypted.
+```txt
+[error] 478#478: *28 upstream SSL certificate verify error: (18:self signed certificate) while SSL handshaking to upstream, client: 127.0.0.1, server: , request: "GET / HTTP/1.1", upstream: "https://127.0.0.1:5001/", host: "localhost"
+```
+
+`SSL certificate verify error`, if we want Nginx to trust our `localhost.crt`, we will need to configure Ubuntu to recognize it. To do so, we need to use the `update-ca-certificates` command. If we look at `man update-ca-certificates`, we can see the following instruction:
+
+```txt
+Furthermore all certificates with a .crt extension found below /usr/local/share/ca-certificates are also included as implicitly trusted.
+```
+
+So to extend the implicit trusted certificates, we place our certificate under `/usr/local/share/ca-certificates/localhost/` then run the command `sudo update-ca-certificates`.
+
+```sh
+sudo mkdir /usr/local/share/ca-certificates/localhost/
+sudo cp /etc/localhost/localhost.crt /usr/local/share/ca-certificates/localhost/
+sudo update-ca-certificates
+sudo service nginx reload
+```
+
+And we are done, we should now be able to navigate to `https://localhost`! Now all our communication channels will be encrypted.
 
 ```
 Browser --(https)--> nginx --(https)--> kestrel
 ```
+
+## Conclusion
+
+Today we saw how to encrypt our communication between client and Nginx and between Nginx to Kestrel. 
