--- a/20180713_https.md
+++ b/20180713_https.md
@@ -118,7 +118,7 @@ Now that we have secured the connection to nginx, we can secure the connection t
 
 Since nginx and kestrel are both on localhost in our example (as we are developing locally), we can use the same certificate which we created as it is bound to the `localhost` common name.
 
-We start by combining `.crt` and `.key` into a `.pfx` file to be used by Kestrel.
+We start by combining `.crt` and `.key` into a `.pfx` file to be used by Kestrel. A `.pfx` file is a file packagine the private and public certificate into a file protected by a password. It adds a protection in the event of the key failling under the wrong hands.
 
 ```sh
 sudo openssl pkcs12 -export -out localhost.pfx -inkey localhost.key -in localhost.crt -name "Localhost Self Signed - Example"
@@ -140,7 +140,7 @@ public class Program
             .UseKestrel(opts => {
                 opts.ListenLocalhost(5001, listenOptions =>
                 {
-                    listenOptions.UseHttps("localhost.pfx");
+                    listenOptions.UseHttps("localhost.pfx", "mypassword");
                 });
             })
             .UseStartup<Startup>();
@@ -183,4 +183,4 @@ Browser --(https)--> nginx --(https)--> kestrel
 
 ## Conclusion
 
-Today we saw how to encrypt our communication between client and Nginx and between Nginx to Kestrel. 
+Today we saw how to encrypt our communication between client and Nginx and between Nginx to Kestrel. We saw how to create a self signed certificate using `openssl`. We started by looking at how to enable SSL for Nginx by configuring the site file and using the Nginx proxy module. Next we looked into Kestrel and how we could use the same SSL certificate to encrypt communication between Nginx and Kestrel for all proxied requests. Hope you liked this post, see you next time!
