--- a/20180713_https.md
+++ b/20180713_https.md
@@ -1,10 +1,11 @@
-# HTTPS with SSL for Nginx and Kestrel
+# HTTPS with SSL for Nginx, Kestrel and Angular
 
 Internet is moving toward secure connections whereby HTTPS is a priority. Browsers are now warning users when navigating to non secured website. With this movement, Kestrel and ASPNET Core have adopted the mentality of security by default rather than security when needed. HTTPS will now be the default and HTTP will be a necessity due to implementation constraints. Together with Lets Encrypt and ACME protocol, we do not have excuses for not implementing an SSL connection.
 
 1. Setup the example
 2. SSL self signed certificate for Nginx
 3. SSL self signed certificate for Kestrel
+4. SSL self signed certificate for Angular CLI
 
 ## 1. Setup the example
 
@@ -180,6 +181,16 @@ And we are done, we should now be able to navigate to `https://localhost`! Now a
 ```
 Browser --(https)--> nginx --(https)--> kestrel
 ```
+
+## 4. SSL self signed certificate for Angular CLI
+
+As a side note, Angular CLI also allows to serve locally with SSL with the following command `--ssl`:
+
+```sh
+ng serve --ssl --port=4201
+```
+
+It will generate a self signed certificate and serve on `https://localhost:4201`. Navigate to the address and download the certificate from Chome directly by clicking on `Copy File`. Once downloaded, install it on the Trusted Root CA and restart all browsers. The certificate will now be trusted and during development we will be serving on https.
 
 ## Conclusion
 
