--- a/20180931_signalr.md
+++ b/20180931_signalr.md
@@ -147,6 +147,9 @@ Referencing `signalr.js` provides access to `signalR` which then gives access to
 </script>
 ```
 
+We start by building a hub  connection using the `HubConnectionBuilder`. We set the log level to `Trace` to print more logs in Chrome console. Next we register a handler on `ReceiveMessage` which is the function specified in the hub `Clients.All.SendAsync("ReceiveMessage", user, message);`. The arguments correspond to the function on the hub too with `(user, message)`.
+Lastly we start the connection, it is recommended to register handlers before starting the connection to avoid losing messages.
+
 And that's all we need, once we run, we should now be able to have a Websocket communication and send message to the hub and receive message from the hub. Here is the full code of the `index.cshtml`.
 
 ```html
