--- a/20180931_signalr.md
+++ b/20180931_signalr.md
@@ -69,6 +69,8 @@ public class Startup
 
 We start to add SignalR in the services `.AddSignalR()` and next we register the hub in a path accessible with `.MapHub<ChatHub>("/chathub");`. This will make the communication with the `ChatHub` available onto `localhost:5000/chathub`.
 
+## 1.2 Client side
+
 Next we create a simple Razor page under `/Pages/Index.cshtml` together with its `PageModel` under `/Pages/Index.cshtml.cs`.
 
 ```html
@@ -223,4 +225,284 @@ SingalR detects the scheme used and establish the proper websocket connection. I
 Now that we know how SignalR works and how to have the connection encrypted, let's see how we can have the communication protected by and authentication mechanism.
 
 ## 3. Websocket Authentication with Identity Server 4
+
+So far we have created a hub and established connection which are anonymous. Because SignalR works on the same pipeline as any ASP NET Core Middleware, it also supports authentication using the `[Authorize]` attribute just like we would use on controllers.
+
+```c#
+[Authorize]
+public class ChatHub : Hub
+{ 
+    ... 
+}
+```
+
+After adding the authorize attribute, we hit the following error when running the application:
+
+```
+info: Microsoft.AspNetCore.Hosting.Internal.WebHost[1]
+      Request starting HTTP/1.1 POST http://localhost:5000/chathub/negotiate text/plain;charset=UTF-8 0
+info: Microsoft.AspNetCore.Authorization.DefaultAuthorizationService[2]
+      Authorization failed.
+fail: Microsoft.AspNetCore.Diagnostics.DeveloperExceptionPageMiddleware[1]
+      An unhandled exception has occurred while executing the request.
+```
+
+It can also be seen from the Chrome debug console where the `/ngotiate` fails:
+
+```
+:5000/chathub/negotiate:1 Failed to load resource: the server responded with a status of 500 (Internal Server Error)
+```
+
+If you already have an authentication mechanism setup, you will be able to use SignalR with your authentication.
+For our example, we will setup a simple Resource Owner Password with Identity Server 4 to demonstrate how SignalR can authenticate with bearer tokens.
+
+### 3.1 Setup Identity Server 4
+
+Start by downloading Identity Server 4 from Nuget, register the Identity Server services and add Identity Server to the app builder pipeline.
+
+```c#
+public class Startup
+{
+    public void ConfigureServices(IServiceCollection services)
+    {
+        ... other configs
+
+        services.AddIdentityServer()
+            .AddDeveloperSigningCredential()
+            .AddInMemoryClients(new[] {
+                new Client {
+                    ClientId = "my-app",
+                    ClientName = "My App",
+                    ClientSecrets = { new Secret("secret".Sha256()) },
+                    AllowedScopes = { "my-api" },
+                    AllowedGrantTypes = GrantTypes.ResourceOwnerPassword
+                }
+            })
+            .AddInMemoryApiResources(new[] {
+                new ApiResource("my-api", "SignalR Test API")
+            })
+            .AddInMemoryIdentityResources(new List<IdentityResource> {
+                new IdentityResources.OpenId(),
+                new IdentityResources.Profile(),
+                new IdentityResources.Email()
+            })
+            .AddInMemoryPersistedGrants()
+            .AddTestUsers(new List<TestUser>{
+                new TestUser {
+                    SubjectId = "alice",
+                    Username = "alice",
+                    Password = "password",
+                    Claims = new[] { new Claim("role", "admin") }
+                }
+            });
+    }
+
+    public void Configure(IApplicationBuilder app, IHostingEnvironment env)
+    {
+        ... other configs
+
+        app.UseIdentityServer();
+    }
+}
+```
+
+_If you are not familiar with Identity Server, you can check my previous blog post on [Resource Owner Password flow with Identity Server 4](https://kimsereyblog.blogspot.com/2017/04/resourceownerpassword-with-identity.html) or [Implicit flow with Identity Server 4](https://kimsereyblog.blogspot.com/2017/09/implicit-flow-with-identity-server-and.html)._
+
+With this configuration, we have setup a client application called `my-app`, an API resource called `my-api` and allowed the client to request for `my-api` scope which will give access to the whole API. We also have configured Identity resources for the user and have added one test user, `alice`. Our configuration of our identity server is now done, once we run we should be able to hit `localhost:5000/.well-known/openid-configuration`.
+
+### 3.2 Setup API
+
+Next we move on to secure our API. We start first by adding `IdentityServer4.AccessTokenValidation` package as it will be used to validate the bearer token. And we add the authentication to the services and register the authentication middleware early in the pipeline:
+
+```
+public class Startup
+{
+    public void ConfigureServices(IServiceCollection services)
+    {
+        ... other configs
+
+        services
+            .AddAuthentication(IdentityServerAuthenticationDefaults.AuthenticationScheme)
+            .AddIdentityServerAuthentication(options =>
+            {
+                options.Authority = "http://localhost:5000";
+                options.RequireHttpsMetadata = false;
+                options.ApiName = "my-api";
+                options.NameClaimType = "sub";
+                options.TokenRetriever = new Func<HttpRequest, string>(req =>
+                {
+                    var fromHeader = TokenRetrieval.FromAuthorizationHeader();
+                    var fromQuery = TokenRetrieval.FromQueryString();
+                    return fromHeader(req) ?? fromQuery(req);
+                });
+            });
+    }
+
+    public void Configure(IApplicationBuilder app, IHostingEnvironment env)
+    {
+        app.UseStaticFiles();
+
+        app.UseAuthentication(); // <<== The authentication middleware is placed before SignalR and Mvc
+
+        app.UseSignalR(hubRouteBuilder => {
+            hubRouteBuilder.MapHub<ChatHub>("/chathub");
+        });
+
+        app.UseIdentityServer();
+
+        app.UseMvc();
+    }
+}
+```
+
+When registering the authentication services, we specify the default scheme as `Bearer` with `AddAuthentication(IdentityServerAuthenticationDefaults.AuthenticationScheme)`. And we specify the details for Identity server like the authority address, the `ApiName` as we have configured previously, the `NameClaimType` so that ASP NET Core will have it's `User.Identity.Name` filled in with the `sub` claim. And lastly we configured an alternative of token retrieval to the classic Authorization header.
+
+```
+options.TokenRetriever = new Func<HttpRequest, string>(req =>
+{
+    var fromHeader = TokenRetrieval.FromAuthorizationHeader();
+    var fromQuery = TokenRetrieval.FromQueryString();
+    return fromHeader(req) ?? fromQuery(req);
+});
+```
+
+`TokenRetrieval` are static functions provided by `IdentityModel.AspNetCore.OAuth2Introspection` allowing us to retrieve the token either from the Authorization header or from a query string `access_token` parameter.
+
+Here is the full `Startup.cs`:
+
+```c#
+using IdentityModel.AspNetCore.OAuth2Introspection;
+using IdentityServer4.AccessTokenValidation;
+using IdentityServer4.Models;
+using IdentityServer4.Test;
+using Microsoft.AspNetCore.Builder;
+using Microsoft.AspNetCore.Hosting;
+using Microsoft.AspNetCore.Http;
+using Microsoft.Extensions.DependencyInjection;
+using System;
+using System.Collections.Generic;
+using System.Security.Claims;
+
+namespace Example
+{
+    public class Startup
+    {
+        public void ConfigureServices(IServiceCollection services)
+        {
+            services.AddSignalR();
+
+            services.AddMvc();
+
+            services.AddIdentityServer()
+                .AddDeveloperSigningCredential()
+                .AddInMemoryClients(new[] {
+                    new Client {
+                        ClientId = "my-app",
+                        ClientName = "my-app",
+                        ClientSecrets = { new Secret("secret".Sha256()) },
+                        AllowedScopes = { "my-api" },
+                        AllowedGrantTypes = GrantTypes.ResourceOwnerPassword
+                    }
+                })
+                .AddInMemoryApiResources(new[] {
+                    new ApiResource("my-api", "SignalR Test API")
+                })
+                .AddInMemoryIdentityResources(new List<IdentityResource> {
+                    new IdentityResources.OpenId(),
+                    new IdentityResources.Profile(),
+                    new IdentityResources.Email()
+                })
+                .AddInMemoryPersistedGrants()
+                .AddTestUsers(new List<TestUser>{
+                    new TestUser {
+                        SubjectId = "alice",
+                        Username = "alice",
+                        Password = "password",
+                        Claims = new[] { new Claim("role", "admin") }
+                    }
+                });
+
+            services
+                .AddAuthentication(IdentityServerAuthenticationDefaults.AuthenticationScheme)
+                .AddIdentityServerAuthentication(options =>
+                {
+                    options.Authority = "http://localhost:5000";
+                    options.RequireHttpsMetadata = false;
+                    options.ApiName = "my-api";
+                    options.NameClaimType = "sub";
+                    options.TokenRetriever = new Func<HttpRequest, string>(req =>
+                    {
+                        var fromHeader = TokenRetrieval.FromAuthorizationHeader();
+                        var fromQuery = TokenRetrieval.FromQueryString();
+                        return fromHeader(req) ?? fromQuery(req);
+                    });
+                });
+        }
+
+        public void Configure(IApplicationBuilder app, IHostingEnvironment env)
+        {
+            if (env.IsDevelopment())
+            {
+                app.UseDeveloperExceptionPage();
+            }
+
+            app.UseAuthentication();
+
+            app.UseStaticFiles();
+
+            app.UseSignalR(hubRouteBuilder => {
+                hubRouteBuilder.MapHub<ChatHub>("/chathub");
+            });
+
+            app.UseIdentityServer();
+
+            app.UseMvc();
+        }
+    }
+}
+```
+
+We now have a functional Identity Server able to deliver Bearer token and we have configured our API. What we have left to do is configure our client to request a token.
+
+### 3.3 Setup Client
+
+What we want to do is to be able to retrieve a token for `alice` and establish a connection with the `HubConnectionBuilder` using the token.
+
+```js
+const connection = new signalR.HubConnectionBuilder()
+    .withUrl("/chathub?access_token=xxxx")
+    .build();
+```
+
+To do that we start by installing `IdentityModel`. Next in the model code `Index.cshtml.cs`, we request for the token in order to be able to have it on the model.
+
+```c#
+public class IndexModel : PageModel
+{
+    public string Token { get; set; }
+
+    public async Task OnGetAsync()
+    {
+        var disco = await DiscoveryClient.GetAsync("http://localhost:5000");
+        var tokenClient = new TokenClient(disco.TokenEndpoint, "my-app", "secret");
+        var tokenResponse = await tokenClient.RequestResourceOwnerPasswordAsync("alice", "password", "my-api");
+        Token = tokenResponse.Json.Value<string>("access_token");
+    }
+}
+```
+
+Lastly we can now complete the `HubConnectionBuilder` token with the retrieved access token:
+
+```js
+const connection = new signalR.HubConnectionBuilder()
+    .withUrl("/chathub?access_token=@Model.Token")
+    .build();
+```
+
+Once we run now, we should be able to authenticate and send messages! And that concludes today's post.
+The full source code is available on my GitHub [https://github.com/Kimserey/signalr-core-sample/blob/master/Example/Startup.cs](https://github.com/Kimserey/signalr-core-sample/blob/master/Example/Startup.cs).
+
+## Conclusion
+
+Today we saw how we could implement a simple chat with SignalR. We saw how SignalR worked and which technologies it relied on. We digged more into Websocket by looking at how we could serve Websocket on a secured channel and how we could authenticate Websocket with a Bearer token. We also configured a simple Identity server 4 Resource Owner password flow to demonstrate the authentication with SignalR. Hope you liked this post, see you next time! 
 
