--- a/20180720_signalr.md
+++ b/20180720_signalr.md
@@ -6,6 +6,7 @@ SignalR makes use of Websocket when available else it falls back to SSE or pulli
 1. Getting stateds with SignalR
 2. SSL encryption for Websocket Secure WSS
 3. Websocket Authentication with Identity Server 4
+4. SignalR behind Nginx
 
 ## 1. Getting stateds with SignalR
 
@@ -499,10 +500,41 @@ const connection = new signalR.HubConnectionBuilder()
     .build();
 ```
 
-Once we run now, we should be able to authenticate and send messages! And that concludes today's post.
+Once we run now, we should be able to authenticate and send messages! 
+
+## 4. SignalR behind Nginx
+
+Lastly if our server is behind nginx, we need to make sure to proxy the necessary headers:
+
+```txt
+proxy_http_version 1.1;
+proxy_set_header   Connection $http_connection;
+proxy_set_header   Upgrade $http_upgrade;
+```
+
+For example we could have the following configuration:
+
+```txt
+server {
+    listen              443 ssl;
+    listen              [::]:443 ssl;
+    ssl_certificate     /mnt/c/ssl/localhost.crt;
+    ssl_certificate_key /mnt/c/ssl/localhost.key;
+
+    location / {
+        proxy_pass          https://localhost:5001;
+        include             /etc/nginx/proxy_params;
+        proxy_http_version  1.1;
+        proxy_cache_bypass  $http_upgrade;
+        proxy_set_header    Connection $http_connection;
+        proxy_set_header    Upgrade $http_upgrade;
+    }
+}
+```
+
+And that concludes today's post.
 The full source code is available on my GitHub [https://github.com/Kimserey/signalr-core-sample/blob/master/Example/Startup.cs](https://github.com/Kimserey/signalr-core-sample/blob/master/Example/Startup.cs).
 
 ## Conclusion
 
-Today we saw how we could implement a simple chat with SignalR. We saw how SignalR worked and which technologies it relied on. We digged more into Websocket by looking at how we could serve Websocket on a secured channel and how we could authenticate Websocket with a Bearer token. We also configured a simple Identity server 4 Resource Owner password flow to demonstrate the authentication with SignalR. Hope you liked this post, see you next time! 
-
+Today we saw how we could implement a simple chat with SignalR. We saw how SignalR worked and which technologies it relied on. We digged more into Websocket by looking at how we could serve Websocket on a secured channel and how we could authenticate Websocket with a Bearer token. We also configured a simple Identity server 4 Resource Owner password flow to demonstrate the authentication with SignalR. Lastly we saw how to configure Nginx to proxy the Websocket connection. Hope you liked this post, see you next time!
